--- a/frontend/src/components/InputTextWithIcon.module.css
+++ b/frontend/src/components/InputTextWithIcon.module.css
@@ -3,7 +3,7 @@
   border: 1px solid #e8e8e8;
   border-radius: 100px;
   background-color: #f6f6f6;
-  padding: 16px;
+  padding: 8px 8px 8px 16px;
   display: flex;
   justify-content: space-between;
 }
