--- a/frontend/src/pages/Chat.module.css
+++ b/frontend/src/pages/Chat.module.css
@@ -8,7 +8,45 @@
   flex-direction: column;
   justify-content: space-between;
 }
+.container > div:first-child {
+  flex-grow: 1;
+  max-height: 83vh;
+  overflow: scroll;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+
+.container > div:first-child::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 400px;
+  }
+}
 
 .container .input_container {
   margin-bottom: 20px;
+}
+
+.container h1 {
+  margin: 0;
+  flex-grow: 1;
+}
+
+#bottom_chat {
+  height: 10px;
+}
+
+.container .header {
+  display: flex;
+  align-items: flex-end;
+}
+
+.container .header > :first-child {
+  color: #5db075;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
 }
